# Fake-Landing-Page-View

./: .coveragerc  .gitignore  .pre-commit-config.yaml  bot.py  config.example.json  config.py  main.py  pyproject.toml  pytest.ini  readme.rst  requirements.txt  run_tests.sh
.github/workflows/: simulate_traffic.yml  tests.yml
src/fake_analytics/: actions.py  cli.py  config.py  core.py  data.py  discovery.py
tests/: README.md  conftest.py
tests/e2e/: test_traffic_bot.py
tests/integration/: test_installed_cli.py
